# AetheriaForge

./: .codacy.yml  .gitignore  .snyk  AGENTS.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  DIRECTIVES.md  Makefile  README.md  databricks.yml  pyproject.toml  requirements.txt
.claude/: README.md
.claude/agents/: README.md  lead-software-engineer.md  python-pro.md  sdlc-technical-writer.md  test-automator.md  ux-delight-specialist.md
.claude/commands/: README.md  audit.md  chore.md  commit.md  doc-maintain.md  document.md  feature.md  generate_branch_name.md  implement.md  plan.md  prime.md  pull-request.md  review.md  start.md  sync.md  test.md  verify.md
.claude/hooks/: stop.js  subagent-stop.js
.codacy/: README.md
.github/: FUNDING.yml
.github/instructions/: codacy.instructions.md
adws/: README.md
app/: README.md  __init__.py  analytics.py  app.py  app.yaml  requirements.txt
assets/: README.md
docs/: README.md  customer_impact_advisory_v0_1_4.md  notion_dashboard_sync.md
notebooks/: 00_quickstart_setup.py  01_register_forge_contract.py  02_run_forge_pipeline.py  03_review_evidence.py  README.md
report/: 2026-04-03T19-54-00-notion-sync-record.md  2026-04-03T21-02-56-notion-sync-record.md  2026-04-03T21-24-25-notion-sync-record.md  2026-04-03T21-46-25-notion-sync-record.md  2026-04-03T22-13-26-notion-sync-record.md  2026-04-04T00-25-07-notion-sync-record.md  2026-04-04T00-35-19Z-brand-ui-verification-correction.md  2026-04-04T01-15-28-notion-sync-record.md  2026-04-04T02-14-48-notion-sync-record.md  2026-04-04T02-55-05Z-notion-sync-record.md  2026-04-04T03-26-29Z-notion-sync-record.md  2026-04-04T03-50-30Z-real-world-visual-stress-test.md  2026-04-04T03-55-20Z-notion-sync-record.md  2026-04-04T04-32-18Z-large-data-visual-stress-test.md  2026-04-04T04-40-02Z-notion-sync-record.md  2026-04-04T06-49-35Z-false-positive-prevention-remediation.md  2026-04-04T06-56-34Z-notion-sync-record.md  2026-04-04T07-18-18Z-notion-sync-record.md  2026-04-04T07-31-26-notion-sync-record.md  2026-04-04T08-30-00Z-large-data-stress-test-v3.md  2026-04-04T08-39-45Z-notion-sync-record.md  2026-04-04T13-11-46Z-notion-sync-record.md  2026-04-04T13-24-50Z-large-data-stress-test-v4.md  2026-04-04T13-27-46Z-notion-sync-record.md  2026-04-05T18-23-23-notion-sync-record.md  2026-04-08T16-45-55-notion-sync-record.md  2026-04-09T16-26-30Z-bundle-validate-auth-unblock.md  2026-04-09T16-46-56Z-notion-sync-record.md  2026-04-09T16-58-31Z-v0.1.4-pypi-release.md  2026-04-09T17-00-32Z-notion-sync-record.md  2026-04-10T17-24-28Z-notion-sync-record.md  20260403_visual_stress_test.md  20260404_visual_stress_test_v2.md  README.md
resources/: README.md  aetheriaforge_app.yml  forge_job.yml  runtime_volume.yml
scripts/: README.md  bootstrap_databricks.py  deploy_databricks_app.py  generate_real_world_stress_fixtures.py  run_large_scale_stress_test.py
specs/: AF-BI-001_Build_Instructions.md  AF-IP-001_Implementation_Plan.md  AF-IP-004_Phase4_Multi_Dataset_Hardening.md  AF-IP-005_Phase5_Databricks_App.md  AF-IP-006_Phase6_DriftSentinel_Integration.md  AF-PRD-001_Product_Requirements_Document.md  AF-SCMP-001_Software_Configuration_Management_Plan.md  AF-SDD-001_Architecture_Blueprint.md  AF-SRS-001_Software_Requirements_Specification.md  AF-TM-001_Traceability_Matrix.md  AF-TP-001_Test_Plan.md  AF-US-001_User_Stories_Acceptance_Criteria.md  AF-WBS-001_Project_Plan_WBS.md  README.md
specs/schema/: README.md
src/: README.md
templates/: README.md  bundled_mode.yml  forge_contract.yml  resolution_policy.yml  schema_contract.yml
tests/: README.md  test_app.py  test_brand_assets.py  test_config.py  test_databricks_scripts.py  test_evidence.py  test_forge_engine.py  test_governance_guards.py  test_history.py  test_ingest.py  test_integration.py  test_orchestration.py  test_packaging_metadata.py  test_path_security.py  test_registry.py  test_resolution.py  test_runner.py  test_runtime_paths.py  test_schema_enforcer.py  test_temporal.py  test_transformer.py
(+49 files in other folders)
